--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1",
-    "socket.io": "^4.8.1"
+    "mongoose": "^8.18.2",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.3",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
